# Polymarket-Whale-Watcher

./: README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml  whale_watcher.py
backend/services/: trades.py
frontend/: .dockerignore  Dockerfile  components.json  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/api/trades/: route.js
frontend/src/app/components/: Navbar.js  TradeCard.js
frontend/src/app/dashboard/: page.js
