[project]
name = "whale-watcher"
version = "0.1.0"
description = "Polymarket Whale Watcher Backend"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

